Added navigation and first set of content elements

--- a/index.html
+++ b/index.html
@@ -18,9 +18,38 @@
                     <li><a href="#">Sneakers</a></li>
                     <li><a href="#">Players</a></li>
                 </ul>
-            </nav>
             
+            </nav>      
         </header>
+        <section class="hero">
+            <h1>Regain your confindence in the streets!</h1>
+            <p class="subhead">A shoe that's timeless and classic</p>
+
+        </section>
+
+        <section class="more-info">
+            <div class="feature">
+                <div class="content">
+                    <p class="title">Lightweight</p>
+                    <p class="title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque aliquid dolore beatae ab nihil temporibus.</p>
+                </div>
+                <img src="images/chuck2.jpg" alt="another shoe">
+            </div>
+            <div class="feature">
+                <div class="content">
+                    <p class="title">Lightweight</p>
+                    <p class="title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque aliquid dolore beatae ab nihil temporibus.</p>
+                </div>
+                <img src="images/chuck2.jpg" alt="another shoe">
+            </div>
+            <div class="feature">
+                <div class="content">
+                    <p class="title">Lightweight</p>
+                    <p class="title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque aliquid dolore beatae ab nihil temporibus.</p>
+                </div>
+                <img src="images/chuck2.jpg" alt="another shoe">
+            </div>
+        </section>
     </div>
 </body>
 </html>
