--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
             <div class="feature">
                 <div class="content">
                     <p class="title">Lightweight</p>
-                    <p class="title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque aliquid dolore beatae ab nihil temporibus.</p>
+                    <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque aliquid dolore beatae ab nihil temporibus.</p>
                 </div>
                 <img src="images/chuck2.jpg" alt="another shoe">
             </div>
             <div class="feature left">
                 <div class="content">
                     <p class="title">Lightweight</p>
-                    <p class="title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque aliquid dolore beatae ab nihil temporibus.</p>
+                    <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque aliquid dolore beatae ab nihil temporibus.</p>
                 </div>
                 <img src="images/chuck3.jpg" alt="another shoe">
             </div>
             <div class="feature">
                 <div class="content">
                     <p class="title">Lightweight</p>
-                    <p class="title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque aliquid dolore beatae ab nihil temporibus.</p>
+                    <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque aliquid dolore beatae ab nihil temporibus.</p>
                 </div>
                 <img src="images/chuck1.jpg" alt="another shoe">
             </div>
