fixed and adjust values that doesn't fit the larger screen size

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             </nav>   
             
-            <svg viewBox="0 0 100 80" width="40" height="40">
+            <svg class="menu" viewBox="0 0 100 80" width="40" height="40">
                 <rect width="100" height="20"></rect>
                 <rect y="30" width="100" height="20"></rect>
                 <rect y="60" width="100" height="20"></rect>
@@ -60,7 +60,7 @@
                     <p class="title">Lightweight</p>
                     <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque aliquid dolore beatae ab nihil temporibus.</p>
                 </div>
-                <img src="images/chuck1.jpg" alt="another shoe">
+                <img src="images/chuck4.jpg" alt="another shoe">
             </div>
         </section>
     </div>
